[version][2.2] : 基本完成了前后端，同时优化了代码。

--- a/doc/架构与代码规范文档.md
+++ b/doc/架构与代码规范文档.md
@@ -4,9 +4,10 @@
 
 ### 版本管理
 
-| 版本 | 说明     |
-| ---- | -------- |
-| 1.0  | 基本规范 |
+| 版本 | 说明                  |
+| ---- | --------------------- |
+| 1.0  | 基本规范              |
+| 2.0  | 规范 2.x 版本中的代码 |
 
 
 
